# amazon-dynamodb-streams-consumer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml  release.yml
clients/dotnet/: Amazon.DynamoDBStreams.Consumer.sln
clients/dotnet/Amazon.DynamoDBStreams.Consumer/: Record.cs  Worker.cs
clients/dotnet/Amazon.DynamoDBStreams.Consumer.Tests/: LeaseLostDispatchTests.cs  ShutdownRequestedDispatchTests.cs
clients/go/: README.md  record.go  record_test.go  worker.go  worker_test.go
clients/java/: README.md  pom.xml
clients/java/src/main/java/com/amazon/dynamodbstreams/consumer/: AttributeValues.java  Record.java  RecordFormat.java  RecordProcessor.java  SdkAttributeValues.java  Sidecar.java  Worker.java  WorkerConfig.java
clients/java/src/test/java/com/amazon/dynamodbstreams/consumer/: AttributeValuesTest.java  ConformanceTest.java  LeaseLostDispatchTest.java  LiveSmokeTest.java  SdkAttributeValuesTest.java  ShutdownRequestedDispatchTest.java
clients/node/: README.md  package-lock.json  package.json  tsconfig.json
clients/node/src/: index.ts  record.ts  sidecar.ts  worker.ts
clients/node/test/: conformance.test.js  download.test.js  record.test.js  worker.test.js
clients/python/: README.md  build_wheel.sh  pyproject.toml
clients/python/examples/: live_smoke.py
clients/python/src/dynamodb_streams_consumer/: __init__.py  record.py  worker.py
clients/python/tests/: fake_sidecar.py  test_client.py  test_record_format.py
clients/rust/: README.md
clients/rust/src/: lib.rs
core/: Cargo.toml  REFERENCES.md
core/src/: backoff.rs  cleanup.rs  coordinator.rs  leader.rs  lib.rs  metrics.rs  multistream.rs  record.rs
docs/: multiplexing-design.md
formal/: Multiplexing.cfg  Multiplexing.tla  README.md
lease-dynamodb/: Cargo.toml
lease-dynamodb/src/: coordinator.rs  dynamodb.rs  lib.rs
lease-dynamodb/tests/: live_lease.rs  live_steal.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
sidecar/: Cargo.toml
sidecar/src/: ipc.rs  main.rs  otel.rs
sidecar/tests/: live_sidecar.rs
source-ddbstreams/: Cargo.toml
source-ddbstreams/src/: aws.rs  lib.rs  record.rs
source-ddbstreams/tests/: live_ddbstreams.rs
worker/: Cargo.toml
worker/src/: aws.rs  fleet.rs  lib.rs
worker/tests/: live_fleet.rs  live_max_concurrency.rs  live_reshard.rs  live_worker.rs
