[package]
name = "ddbstreams-kcl-protocol"
version = "0.0.1"
edition = "2021"
description = "Wire protocol between the ddbstreams-kcl sidecar and a language binding: newline-delimited JSON messages (records out, checkpoint acks in). Pure + serde; no network, no AWS."

[dependencies]
ddbstreams-kcl-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "ddbstreams_kcl_protocol"
path = "src/lib.rs"
