[package]
name = "amazon-dynamodb-streams-consumer-protocol"
version = "0.0.1"
edition = "2021"
description = "Wire protocol between the amazon-dynamodb-streams-consumer sidecar and a language binding: newline-delimited JSON messages (records out, checkpoint acks in). Pure + serde; no network, no AWS."

[dependencies]
amazon-dynamodb-streams-consumer-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "amazon_dynamodb_streams_consumer_protocol"
path = "src/lib.rs"
