[package]
name = "amazon-dynamodb-streams-consumer-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JVM-free language-binding sidecar for amazon-dynamodb-streams-consumer. Runs the full Rust consumer (shard discovery, leases, ordering, checkpoints) and streams ordered record batches to a thin language client over stdio using the JSON-Lines protocol; the client acks with a checkpoint. The MultiLangDaemon analog, without a JVM."

[[bin]]
name = "amazon-dynamodb-streams-consumer-sidecar"
path = "src/main.rs"

[dependencies]
amazon-dynamodb-streams-consumer-core = { path = "../core" }
amazon-dynamodb-streams-consumer-protocol = { path = "../protocol" }
amazon-dynamodb-streams-consumer-source = { path = "../source-ddbstreams", features = ["aws"] }
amazon-dynamodb-streams-consumer-lease = { path = "../lease-dynamodb", features = ["aws"] }
amazon-dynamodb-streams-consumer-worker = { path = "../worker", features = ["aws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "signal", "time"] }
async-trait = "0.1"

# OTEL/OTLP metrics export (Model A). Feature-gated so the lean default build
# pulls none of the OpenTelemetry dependency tree. OTLP/HTTP + optional SigV4 so
# it can target the native CloudWatch OTLP endpoint directly (no collector).
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["http-proto", "metrics"], optional = true }
opentelemetry-http = { version = "0.27", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
http = { version = "1", optional = true }
bytes = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
aws-credential-types = { version = "1", optional = true }
aws-sigv4 = { version = "1", optional = true }
aws-smithy-runtime-api = { version = "1", features = ["client"], optional = true }

[features]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-http",
    "dep:reqwest",
    "dep:http",
    "dep:bytes",
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:aws-sigv4",
    "dep:aws-smithy-runtime-api",
]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "sync", "time", "process"] }
aws-config = { version = "1" }
aws-sdk-dynamodb = { version = "1" }
aws-sdk-dynamodbstreams = { version = "1" }
