[package]
name = "amazon-dynamodb-streams-consumer-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async worker that composes a StreamSource + LeaseStore + RecordProcessor into an ordering-preserving DynamoDB Streams consumer. Engine + async traits are always built (offline-tested); the concrete AWS wiring is behind the optional `aws` feature."

[features]
aws = [
    "dep:amazon-dynamodb-streams-consumer-source",
    "dep:amazon-dynamodb-streams-consumer-lease",
]

[dependencies]
amazon-dynamodb-streams-consumer-core = { path = "../core" }
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "time", "macros", "sync"] }
amazon-dynamodb-streams-consumer-source = { path = "../source-ddbstreams", features = ["aws"], optional = true }
amazon-dynamodb-streams-consumer-lease = { path = "../lease-dynamodb", features = ["aws"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
aws-config = { version = "1" }
aws-sdk-dynamodb = { version = "1" }
aws-sdk-dynamodbstreams = { version = "1" }
